--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,8 @@ jobs:
         pip install -r requirements.txt
     - name: Create Database
       run: |
-        python manage.py migrate
+        python manage.py makemigrations workshop
+        python manage.py migrate workshop
     - name: Run Tests
       run: |
         python manage.py test
