--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ django-filter
 markdown
 djangorestframework
 
+# For OpenAPI schema generation
+drf-spectacular
+
 # Testing dependencies
 pytest
 pytest-django
