--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,3 +27,4 @@ jobs:
         with:
           push: true
           tags: yayacout/upsilon-workshop:latest
+          platforms: linux/amd64,linux/arm/v8
