[Docker] Build for linux/aarch64

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,4 +28,4 @@ jobs:
           push: true
           tags: yayacout/upsilon-workshop:latest
           # platforms: linux/amd64,linux/arm/v8
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/aarch64
