--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,69 @@
-# Server dependencies
-django
-django-filter
-markdown
-djangorestframework
-
-# Authentication
-django-rest-knox
-
-# CORS headers
-django-cors-headers
-
-# MySQL database
-mysqlclient
-
-# For OpenAPI schema generation
-drf-spectacular
-
-# For django-filter bootstrap styling
-django-crispy-forms
-crispy-bootstrap5
-crispy-bootstrap3
-
-# Testing dependencies
-pytest
-pytest-django
+asgiref==3.6.0
+astroid==2.15.4
+attrs==23.1.0
+bandit==1.7.5
+cffi==1.15.1
+crispy-bootstrap3==2022.1
+crispy-bootstrap5==0.7
+cryptography==40.0.2
+dill==0.3.6
+Django==4.2.1
+django-cors-headers==3.14.0
+django-crispy-forms==2.0
+django-filter==23.2
+django-rest-knox==4.2.0
+djangorestframework==3.14.0
+dodgy==0.2.1
+drf-spectacular==0.26.2
+flake8==5.0.4
+flake8-polyfill==1.0.2
+gitdb==4.0.10
+GitPython==3.1.31
+gunicorn==21.2.0
+inflection==0.5.1
+iniconfig==2.0.0
+isort==5.12.0
+jsonschema==4.17.3
+lazy-object-proxy==1.9.0
+Markdown==3.4.3
+markdown-it-py==2.2.0
+mccabe==0.7.0
+mdurl==0.1.2
+mypy==1.2.0
+mypy-extensions==1.0.0
+mysqlclient==2.1.1
+packaging==23.1
+pbr==5.11.1
+pep8-naming==0.10.0
+platformdirs==3.5.0
+pluggy==1.0.0
+prospector==1.9.0
+pycodestyle==2.9.1
+pycparser==2.21
+pydocstyle==6.3.0
+pyflakes==2.5.0
+Pygments==2.15.1
+pylama==8.4.1
+pylint==2.17.4
+pylint-celery==0.3
+pylint-django==2.5.3
+pylint-flask==0.6
+pylint-plugin-utils==0.7
+pyrsistent==0.19.3
+pytest==7.3.1
+pytest-django==4.5.2
+pytz==2023.3
+#PyYAML==6.0
+requirements-detector==1.2.1
+rich==13.3.5
+semver==3.0.0
+setoptconf-tmp==0.3.1
+smmap==5.0.0
+snowballstemmer==2.2.0
+sqlparse==0.4.4
+stevedore==5.1.0
+toml==0.10.2
+tomlkit==0.11.8
+typing_extensions==4.5.0
+uritemplate==4.1.1
+wrapt==1.15.0
